test(benchmark): expand bundled Godot benchmark coverage
- add collection, math, and runtime benchmark fixtures for compiled, interpreter, and measurement paths
- harden the benchmark runner with per-case runtime workdirs, stable report names, and dual-target setup checks
- add release-build and opt-in runtime tests for the full bundled benchmark set
- update the benchmark implementation plan and retune int_loop fixture directives to the new defaults